--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,8 @@ commands:
     parameters:
       stack-name:
         description: |
-          --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID}"
-          --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID}"
+          --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}"
+          --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}"
         type: string   
     steps:
       - run:
@@ -15,9 +15,9 @@ commands:
           when: on_fail
           command: |
             aws cloudformation delete-stack \
-              --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID}"
+              --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}"
             aws cloudformation delete-stack \
-              --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID}"
+              --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}"
 
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
@@ -135,7 +135,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install awscli
+          name: Install aws-cli
           command: |
             yum install -y tar gzip
             apk add --update tar gzip
@@ -144,16 +144,16 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/backend.yml \
-              --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID}" \  
+              --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" \  
               --tags project=udapeople
       - run:
           name: Ensure frontend infrastructure exist
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/frontend.yml \
-              --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID}" \ 
+              --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" \ 
               --tags project=udapeople
       - run:
           name: Add backend ip to ansible inventory
@@ -164,7 +164,7 @@ jobs:
       - persist_to_workspace:
           root: ~/
           paths:
-            - project/.circleci/ansible/inventory.txt
+            - shehu1971666/.circleci/ansible/inventory.txt
       # Here's where you will add some code to rollback on failure      
 
 #   configure-infrastructure:
