--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,10 +135,9 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install aws-cli
+          name: Install tar gzip
           command: |
             yum install -y tar gzip
-            apk add --update tar gzip
       - run:
           name: Ensure backend infrastructure exists
           command: |
@@ -158,13 +157,16 @@ jobs:
       - run:
           name: Add backend ip to ansible inventory
           command: |
-            aws ec2 describe-instances \
+            BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[*].Instances[*]PublicIpAddress' \
-              --output text >> inventory
+              --output text) 
+              echo BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
+              cat .circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
-            - shehu1971666/.circleci/ansible/inventory.txt
+            - project/.circleci/ansible/inventory.txt
       # Here's where you will add some code to rollback on failure      
 
 #   configure-infrastructure:
@@ -314,9 +316,9 @@ workflows:
           requires: [build-frontend]
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-          filters:
-            branches:
-              only: [test-feature-branch]
+          # filters:
+            # branches:
+              # only: [test-feature-branch]
       # - configure-infrastructure:
       #     requires: [deploy-infrastructure]
       # - run-migrations:
