--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -185,10 +185,10 @@ jobs:
       - run:
           name: configure server
           command: |
+            cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
       # Here's where you will add some code to rollback on failure
       
-      # cd .circleci/ansible
 
       # Get backend url
       # export BACKEND_IP=$(aws ec2 describe-instances \
