--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -181,13 +181,20 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible
+            apk add --update ansible tar gzip
+            # apk add --update nodejs ansible tar npm  curl gzip  aws-cli
+      - run: pip install awscli
+      - run:
+          name: confirm inventory ip addreess
+          command: |
+            cat ~/project/.circleci/ansible/inventory.txt
       - run:
           name: configure server
           command: |
+            pwd
             cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
-      # Here's where you will add some code to rollback on failure
+      - destroy_environment # Here's where you will add some code to rollback on failure
       
 
       # Get backend url
