--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -195,6 +195,8 @@ jobs:
             cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
       # Here's where you will add some code to rollback on failure
+      - revert-migration 
+      - destroy-environment 
       
 
       # Get backend url
