--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -15,9 +15,18 @@
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
       # Your code here
+      wait_for_connection:
+        timeout: 600
 
     - name: "install python for Ansible."
       # Your code here
+      become: true
+      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
+      changed_when: false
+    
+    - name: "wait for port 22 to become reachable/usable"
+      wait_for:
+        port: 22
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
@@ -33,3 +42,4 @@
 
   roles:
     # Your code here
+    - configure-server
