--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -16,7 +16,7 @@
     - name: "wait 600 seconds for target connection to become reachable/usable."
       # Your code here
       wait_for_connection:
-        timeout: 600
+        # timeout: 600
 
     - name: "install python for Ansible."
       # Your code here
@@ -27,6 +27,8 @@
     - name: "wait for port 22 to become reachable/usable"
       wait_for:
         port: 22
+    
+    - setup:
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
