--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,9 +183,9 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update python3
-            apk add --update && app add --upgrade
-            apk add --update ansible tar gzip nodejs npm pm2 openssh
+            apk add python3
+            apk add --update && apk add --upgrade
+            apk add nodejs npm pm2
       - run: pip install awscli
       - run:
           name: confirm inventory ip addreess
