--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,7 +173,7 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image: python:3.7-alpine3.11
+      - image: python:3.7-alpine3.16
     steps:
       - checkout
       - add_ssh_keys:
@@ -183,9 +183,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add python3
-            apk add --update && apk add --upgrade
-            apk add nodejs npm pm2
+            apk add --update tar gzip ansible
       - run: pip install awscli
       - run:
           name: confirm inventory ip addreess
