--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,8 +183,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update tar gzip ansible
-      - run: pip install awscli
+            apk add --update ansible tar gzip curl nodejs npm openssh-client git
+            pip install awscli
       - run:
           name: confirm inventory ip addreess
           command: |
