--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,8 +183,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible tar gzip curl nodejs npm openssh-client git
-            pip install awscli
+            apk add --update ansible tar gzip nodejs npm pm2
       - run:
           name: confirm inventory ip addreess
           command: |
