--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,7 +183,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible tar gzip nodejs npm pm2
+            apk add --update ansible tar gzip
       - run:
           name: confirm inventory ip addreess
           command: |
