--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,19 +87,19 @@ jobs:
             npm install
             npm run test
                 
-  # test-backend:
-  #   docker:
-  #     - image: circleci/node:13.8.0
-  #   steps:
-  #     - checkout
-  #     - restore_cache:
-  #         keys: [test-backend]
-  #     - run:
-  #         name: Test backend
-  #         command: |
-  #           cd backend
-  #           npm install
-  #           npm run test
+  test-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [test-backend]
+      - run:
+          name: Test backend
+          command: |
+            cd backend
+            npm install
+            npm run test
             
   # scan-frontend:
   #   docker:
@@ -334,8 +334,8 @@ workflows:
       - build-backend
       - test-frontend:
           requires: [build-frontend]
-      # - test-backend:
-      #     requires: [build-backend]
+      - test-backend:
+          requires: [build-backend]
       # - scan-backend:
       #     requires: [build-backend]
       # - scan-frontend:
