--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,6 +146,7 @@ jobs:
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --tags project=udapeople \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
+              exit 1
       - run:
           name: Ensure frontend infrastructure exist
           command: |
