--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,10 +142,10 @@ jobs:
           name: Ensure backend infrastructure exists
           command: |
             aws cloudformation deploy \
-              --template-file .circleci/files/backend.yml \
-              --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --tags project=udapeople \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
+              # --template-file .circleci/files/backend.yml \
+              # --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              # --tags project=udapeople \
+              # --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
               exit 1
       - run:
           name: Ensure frontend infrastructure exist
