--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,16 +173,16 @@ jobs:
 
   configure-infrastructure:
     docker:
-      # - image: python:3.7-alpine3.16
-      - image: cimg/base:stable
+      - image: python:3.7-alpine3.16
+      # - image: cimg/base:stable
     steps:
       - checkout
       - add_ssh_keys:
           fingerprints: ["8c:03:8f:fa:8d:8a:73:41:37:6a:15:36:fc:6d:52:3a"]
       - attach_workspace:
           at: ~/
-      - install_aws-cli
-      - install_ansible
+      # - install_aws-cli
+      # - install_ansible
       - run:
           name: Install dependencies
           command: |
