--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -342,6 +342,8 @@ jobs:
           name: Get backend url
           command: |
             export BACKEND_IP=$(cat ~/backend_ip.txt)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}"
       - run:
           name: Backend smoke test.
           command: |
